--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "webpack-merge": "^6.0.1"
   },
   "dependencies": {
+    "lil-gui": "^0.20.0",
+    "stats.js": "^0.17.0",
     "three": "^0.175.0"
   }
 }
